--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,9 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Let's Chat</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
